--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	    <nav role="navigation">Home</nav>
+    <img src="https://images.pexels.com/photos/17667643/pexels-photo-17667643/free-photo-of-mar-de-cactos.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="" role="image">
+    <h1 role="heading">My Portfolio</h1>
+    <ul role="list">
+      <li role="listitem">Bat</li>
+      <li role="listitem">Cat</li>
+      <li role="listitem">Car</li>
+    </ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
