--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	    <nav role="navigation">Home</nav>
-    <img src="https://images.pexels.com/photos/17667643/pexels-photo-17667643/free-photo-of-mar-de-cactos.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="" role="image">
+    <img src="https://images.pexels.com/photos/17667643/pexels-photo-17667643/free-photo-of-mar-de-cactos.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="" role="img">
     <h1 role="heading">My Portfolio</h1>
     <ul role="list">
       <li role="listitem">Bat</li>
